--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.5",
+    "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.16",
     "uuid": "^13.0.0",
     "yup": "^1.7.1"
